--- a/1 CSS Projects/Animated Cards/style.css
+++ b/1 CSS Projects/Animated Cards/style.css
@@ -1,5 +1,12 @@
-*::before, *::after {
-    font-family: 'Open Sans' , sans-serif;
+*::before, *::after {    
+    .open-sans-<uniquifier> {
+      font-family: "Open Sans", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: <weight>;
+      font-style: normal;
+      font-variation-settings:
+        "wdth" 100;
+    }
 }
 
 .card-grid {
