--- a/1 CSS Projects/CSS Only Tool Tips/style.css
+++ b/1 CSS Projects/CSS Only Tool Tips/style.css
@@ -1,5 +1,6 @@
 *, *::before, *::after {
     box-sizing: border-box;
+    
 }
 
 body {
@@ -22,11 +23,27 @@ body {
 
 .avatar::before,
 .avatar::after {
+    --scale: 0;
     position: absolute;
-    content: '';
     top: -.25rem;
-    left: 50%;
-    height: 50px;
-    width: 50px;
+    left: 50%; 
+    transform: translateX(-50%) translateY(-100%) scale(var(--scale));
+    transition: 150ms transform;
+    transform-origin: bottom center;
+}
+
+.avatar::before {
+    content: attr(data-tooltip);
+    color: white;
+    padding: .5rem;
+    border-radius: .3rem;
+    text-align: center;
+    width: max-content;
+    max-width: 100%;
     background: black;
+}
+
+.avatar:hover::before {
+    --scale: 1;
+
 }
