--- a/1 CSS Projects/CSS Only Tool Tips/style.css
+++ b/1 CSS Projects/CSS Only Tool Tips/style.css
@@ -24,15 +24,21 @@ body {
 .avatar::before,
 .avatar::after {
     --scale: 0;
+    --arrow-size: 10px;
+    --tooltip-color:#333;
+    --translate-y:
+
     position: absolute;
     top: -.25rem;
     left: 50%; 
-    transform: translateX(-50%) translateY(-100%) scale(var(--scale));
+    transform: translateX(-50%) translateY(var(--translate-y, 0)) scale(var(--scale));
     transition: 150ms transform;
     transform-origin: bottom center;
 }
 
 .avatar::before {
+    --translate-y: calc(-100 - var(var(--arrow-size)));
+    
     content: attr(data-tooltip);
     color: white;
     padding: .5rem;
@@ -40,10 +46,16 @@ body {
     text-align: center;
     width: max-content;
     max-width: 100%;
-    background: black;
+    background: var(--tooltip-color);
 }
 
-.avatar:hover::before {
+.avatar:hover::before,
+.avatar:hover:after {
     --scale: 1;
+}
 
+.avatar::after {
+    content: '';
+    border: var(--arrow-size) solid transparent;
+    border-top-color: var(--tooltip-color);
 }
