100% done with Text Animation

--- a/1 CSS Projects/Advanced Text Animation/style.css
+++ b/1 CSS Projects/Advanced Text Animation/style.css
@@ -21,16 +21,18 @@ body {
 }
 
 .list-item {
-    
+    position: relative;
     font-weight: bold;
+    width: max-content;
     font-size: 1.5rem;
-    display: flex;
-    justify-content: center;
+    margin: o auto;
 }
 
 
 .list-item:hover > .split-text {
     color: transparent;
+    user-select: none;
+    transition-delay: 0ms;
 }
 
 .list-item > .split-text::after {
@@ -44,35 +46,64 @@ body {
     display: flex;
     flex-direction: column;
     line-height: 1;
+    transition: color 0ms 200ms;
 }
 
+.list-item > .split-text::before,
 .list-item > .split-text::after {
-    animation: skew-left 200ms ease-in-out backwards reverse;
-}
-
-.list-item:hover > .split-text::before,
-.list-item:hover > .split-text::after {
     position: absolute;
     content: attr(data-text);
     height: calc(.5em);
     overflow: hidden;
     left: 0;
     right: 0;
-    color: var(--text-color);
+    color:var(--text-color);
+    transition: color 200ms ease-in-out, transform 200ms ease-in-out ;
 }
 
 
+.list-item:hover > .split-text::before,
 .list-item:hover > .split-text::after {
+    color: white;
+    transform: skewX(15deg);
+
+}
+
+
+.list-item > .split-text::after {
     bottom: 0;
     display: flex;
-    align-items: flex-end;
-    transform: skewX(15deg);
-    transition: transform 200ms ease-in-out;
-    animation: skew-left 200ms ease-in-out forwards;
+    align-items: flex-end;   
 }
 
-@keyframes skew-left {
+
+.list-item::before {
+    content: "";
+    position: absolute;
+    width: 110%;
+    left: -5%;
+    top: calc(50% - 1px);
+    height: 2px;
+    transform: scale(0);
+    background-color: var(--text-color);
+    border-radius: 20px;
+    z-index: 1;
+    transition: transform 200ms ease-in-out;
+}
+
+.list-item:hover::before {
+    transform: scale(1);
+}
+
+@keyframes skew {
     100% {
-        transform: skewX(10px);
+        transform: skewX(15deg);
+        color: white;
+    }
+}
+
+@keyframes scale {
+    100% {
+        transform: scale(1);
     }
 }
